<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleSectionTest"
        android:layout_width="0dp"
        android:layout_height="100dp"

        android:layout_marginBottom="@dimen/default_dimen_value"
        android:layout_marginTop="@dimen/default_dimen_value"

        android:gravity="center"
        android:text="@string/activity_test_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/default_dimen_title_activity"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/descriptionExecutionTest"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent" />

    <TextView
        android:id="@+id/descriptionExecutionTest"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginBottom="@dimen/default_dimen_value"
        android:layout_marginTop="@dimen/default_dimen_value"

        android:gravity="center"
        android:padding="@dimen/default_dimen_value"
        android:text="@string/activity_text_explain"
        android:textColor="@android:color/black"
        android:textSize="@dimen/default_dimen_value"

        app:layout_constraintBottom_toTopOf="@+id/startTest"
        app:layout_constraintTop_toBottomOf="@id/titleSectionTest"
        app:layout_constraintWidth_default="percent" />


    <Button
        android:id="@+id/startTest"
        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_margin="@dimen/default_dimen_value"
        android:layout_marginBottom="@dimen/default_dimen_value"
        android:layout_marginTop="@dimen/default_dimen_value"

        android:background="@drawable/custom_button"
        android:text="@string/activity_text_button_start_test"
        android:textColor="@android:color/white"

        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- BOTTONE DA MOSTRARE UNA VOLTA COMLETATO IL TEST PER LA PRIMA VOLTA
        <Button
            android:id="@+id/test"
            android:layout_width="0dp"
            android:layout_height="50dp"

            android:layout_margin="@dimen/default_dimen_value"
            android:layout_marginBottom="@dimen/default_dimen_value"
            android:layout_marginTop="@dimen/default_dimen_value"

            android:background="@drawable/custom_button"
            android:text="TEST"
            android:textColor="@android:color/white"

            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/startTest" />

            -->

    <android.support.constraint.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />
    <!--      app:layout_constraintGuide_percent="0.25" -->

    <android.support.constraint.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />
    <!--       app:layout_constraintGuide_percent="0.75" -->

</android.support.constraint.ConstraintLayout>